# Mosapic

./: .gitignore  CMakeLists.txt  README.md
cmake/: Version.hpp.in  sources.cmake  sources.list
scripts/: batch-start.sh  flickr-dl.sh
src/: Debugger.hpp  HexaCrawler.cpp  HexaCrawler.hpp  HexaMosaic.cpp  HexaMosaic.hpp  Hexapic.cpp  Image.cpp  Image.hpp  Types.hpp  pca.cpp
src/crawler/: Constants.hpp  HexaCrawler.cpp  HexaCrawler.hpp  Main.cpp  MosaCrawler.cpp  MosaCrawler.hpp
src/generator/: main.cpp
src/mosaic/: HexaMosaic.cpp  HexaMosaic.hpp  Main.cpp  Mosapic.cpp  Mosapic.hpp
src/pca/: PCA.cpp  PCA.hpp
src/utils/: MatIO.cpp  MatIO.hpp  Timer.cpp  Timer.hpp  Verbose.cpp  Verbose.hpp
src/utils/cuda/: gammacorrect.cu  gammacorrect.h  init.cu  init.h  process.cu  process.h
src/utils/pca/: PCA.cpp  PCA.hpp
